<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainactivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">

    <TextView
        android:layout_width="290dp"
        android:layout_height="70dp"
        android:gravity="center"
        android:text="@string/mini_tank_war"
        android:textSize="30sp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/laserbullet"
        />

    <TextView
        android:id="@+id/newagame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:textSize="20sp"
        android:text="@string/multi_mode"
    />

    <TextView
        android:id="@+id/joingame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/solo_mode"
        android:textSize="20sp"
        android:layout_marginBottom="80dp"
   />


</LinearLayout>