<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/world"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <View
        android:layout_height="10dp"
        android:layout_width="match_parent"
        android:background="#66CCFF"
        />

    <View
        android:layout_width="10dp"
        android:layout_height="match_parent"
        android:background="#66CCFF"
        />
    <View
        android:layout_width="10dp"
        android:layout_height="match_parent"
        android:background="#66CCFF"
        android:layout_gravity="end"
        />

    <View
        android:layout_height="10dp"
        android:layout_marginTop="400dp"
        android:layout_width="match_parent"
        android:background="#66CCFF"
        />



    <ImageView
        android:id="@+id/opbuttonbrand"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/opbuttonbrand"
        android:layout_marginTop="500dp"
        android:layout_marginStart="25dp"
        />

    <ImageView
        android:id="@+id/opbutton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/green_circle"
        android:layout_marginTop="525dp"
        android:layout_marginLeft="50dp"
        />

    <ImageView
        android:id="@+id/atbuttonbrand"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/backbutton"
        android:layout_marginTop="500dp"
        android:layout_marginStart="250dp"
        />

    <ImageView
        android:id="@+id/atbutton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/green_circle"
        android:layout_marginTop="525dp"
        android:layout_marginLeft="275dp"
        />

    <TextView
        android:gravity="center"
        android:text="@string/_1"
        android:id="@+id/buttonbullet1"
        android:layout_width="33dp"
        android:layout_height="33dp"
        android:background="@drawable/uncheckbullet"
        android:layout_marginTop="501dp"
        android:layout_marginLeft="224dp"
        />

    <TextView
        android:gravity="center"
        android:text="@string/_2"
        android:id="@+id/buttonbullet2"
        android:layout_width="33dp"
        android:layout_height="33dp"
        android:background="@drawable/uncheckbullet"
        android:layout_marginTop="534dp"
        android:layout_marginLeft="217dp"
        />

    <TextView
        android:gravity="center"
        android:text="@string/_3"
        android:id="@+id/buttonbullet3"
        android:layout_width="33dp"
        android:layout_height="33dp"
        android:background="@drawable/uncheckbullet"
        android:layout_marginTop="567dp"
        android:layout_marginLeft="224dp"
        />


</FrameLayout>